# x402-assured

./: .gitignore  LICENSE  README.md  claude_handover.md  package.json  pnpm-lock.yaml  startingpoint.txt  tailwind.config.cjs  tsconfig.json  vercel.json
contracts/: Anchor.toml  Cargo.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
dashboard/: .env.example  index.html  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  main.tsx  types.ts  verify.ts
demo/: bad-demo.ts  fallback-demo.ts  good-demo.ts  util.ts
docs/: CLI.md  CONTRACTS.md  DEMO.md  OVERVIEW.md  PLAN.md  QA.md  ROADMAP.md  SDK.md  SERVER.md  SPEC.md
idl/: escrow.json
sdk/ts/: facilitators.ts  index.ts
server/: index.ts
server/idl/: escrow.json  reputation.json
tools/cli/: index.ts
types/: tweetnacl.d.ts
