[package]
name = "reputation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
